--- a/about.html
+++ b/about.html
@@ -132,7 +132,7 @@
 
     <div class="bottom_block">
       <h1>Возможность самостоятельного и курируемого обучения</h1>
-      <p>Разработан для изучения основ веб-вёрстки, языка гипертекстовой разметки HTML и&nbsp;каскадных таблиц стилей CSS</p>
+      <p>Вы можете обучаться самостоятельно по исходному коду проекта, выложенному на GitHub, или записаться на курс «Основы <br> веб-вёрстки» в Школе Дизайна НИУ ВШЭ</p>
       <a class="btn" href="#">Исходный код на GitHub</a>
       <a class="btn btn-black" href="#">Курс в Школе Дизайна</a>
     </div>
