--- a/about.html
+++ b/about.html
@@ -34,6 +34,12 @@
         display: flex;
         justify-content: space-between;
       }
+      .two{
+        padding-top: 44px;
+      }
+      .three img {
+        margin-top: 66px;
+      }
       section div{
         width: 50%;
         overflow: hidden;
@@ -71,7 +77,7 @@
       }
       .bottom_block {
         text-align: center;
-        padding-top: 100px;
+        padding-top: 76px;
         border-top: 1px solid #bbb;
       }
       .btn {
@@ -110,7 +116,7 @@
       </div>
     </section>
 
-    <section>
+    <section class="two">
       <div>
         <img src="images/about2.png" alt="">
       </div>
@@ -120,7 +126,7 @@
       </div>
     </section>
 
-    <section>
+    <section class="three">
       <div>
         <h1>Реальный проект, реальный пабочий процесс</h1>
         <p>Обучение приближено к работе в реальной жизни, работа разбита на этапы от типографики, создания меню и использования эффектов, до адаптации под мобильные устройства и использования JavaScript скриптов</p>
@@ -131,7 +137,7 @@
     </section>
 
     <div class="bottom_block">
-      <h1>Возможность самостоятельного и курируемого обучения</h1>
+      <h1>Возможность самостоятельного и&nbsp;курируемого обучения</h1>
       <p>Вы можете обучаться самостоятельно по исходному коду проекта, выложенному на GitHub, или записаться на курс «Основы <br> веб-вёрстки» в Школе Дизайна НИУ ВШЭ</p>
       <a class="btn" href="#">Исходный код на GitHub</a>
       <a class="btn btn-black" href="#">Курс в Школе Дизайна</a>
