--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="stylesheets/style.css">
+    <link rel="icon" type="image/x-icon" href="http:images/favicon.ico" />
+    <link rel="icon" type="image/png" href="http:images/favicon.png" />
     <script src="javascripts/jquery-3.5.1.js" charset="utf-8"></script>
     <script type="text/javascript">
     $(function() {
@@ -22,12 +24,12 @@
    </head>
    <body>
      <div class="menubar">
-       <a href="#"><img src="images/logo.svg" alt=""</a>
-       <a href="#">О проекте</a>
+       <a href="index.html"><img src="images/logo.svg" alt=""</a>
+       <a href="about.html">О проекте</a>
      </div>
      <nav class="sidebar">
-       <p><a href="#s1">Дом Наркомфина - жилой дом переходного типа</a></p>
        <ul>
+         <li><a href="#s1">Дом Наркомфина - жилой дом переходного типа</a></li>
          <li><a href="#s2">История создания</a></li>
          <li><a href="#s3">Идеология</a></li>
          <li><a href="#s4">Участок</a></li>
@@ -36,7 +38,7 @@
            <li><a href="#s6">Состав жилого комплекса</a></li>
            <li><a href="#s7">Пространственная организация комплекса</a></li>
            <li><a href="#s8">Архитектура жилого дома</a></li>
-           <li><a href="#s9">Конструкции и материалы</a></li>
+           <li><a href="#s9">Парк и открытый первый этаж</li>
            <li><a href="#s10">Интерьеры</a></li>
          </ul>
          <li><a href="#s11">Критика проекта</a></li>
@@ -57,13 +59,7 @@
            <li><a href="">Известные жители</a></li>
          </ul>
          <li><a href="">См. также</a></li>
-         <li><a href="">Примечания</a></li>
-         <ul>
-           <li><a href="">Сноски</a></li>
-           <li><a href="">Источники</a></li>
-         </ul>
-         <li><a href="">Литература</a></li>
-         <li><a href="">Ссылки</a></li>
+
        </ul>
    </nav>
     <article>
@@ -73,9 +69,8 @@
         и инженера <a href="https://ru.wikipedia.org/wiki/Сергей_Львович_Прохоров">Сергея Прохорова</a> для работников <a href="https://ru.wikipedia.org/wiki/Народный_комиссариат_финансов_СССР">Народного комиссариата финансов СССР</a> (Наркомфина). Находится в Москве на <a href="https://ru.wikipedia.org/wiki/Новинский_бульвар">Новинском бульваре</a>
         по адресу дом № 25, корпус 1.</p>
       <p>Долгое время находился в аварийном состоянии, был трижды включен в список <q cite="https://ru.wikipedia.org/wiki/Дом_Наркомфина#cite_note-МК-3">100 главных зданий мира, которым грозит уничтожение</q>. В 2017 году началась реставрация по проекту мастерской Алексея Гинзбурга, внука М.Я. Гинзбурга.</p>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Narkomfin_Building_Moscow_2007_01.jpg/600px-Narkomfin_Building_Moscow_2007_01.jpg" alt="Наркомфин">
+      <img src="images/narkomfin 1.jpg" alt="Наркомфин">
       <h2 id="s2">История создания</h2>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/07/Narkonfin-apartments-moscow-russia-architects-ginsburg-m-milinis-i-1928-1929-photograph-photographer-robert-byron3.png/600px-Narkonfin-apartments-moscow-russia-architects-ginsburg-m-milinis-i-1928-1929-photograph-photographer-robert-byron3.png" alt="Фрагмент южного торцевого фасада с полукруглыми балконами. Фото Роберт Байрон. Западные источники указывают на квартиру с двумя верхними балконами как принадлежавшую А. Дейнеке.">
       <p>Дом Наркомфина, или 2-й дом Совнаркома РСФСР, стал одним из экспериментальных домов, построенных по результатам теоретических исследований Секции типизации Стройкома РСФСР,
         работавшей в 1928—1929 годы под руководством <a href="https://ru.wikipedia.org/wiki/Гинзбург,_Моисей_Яковлевич">М. Я. Гинзбурга</a>. Работе секции предшествовал конкурс на «эскизный проект жилого дома трудящихся», проведенный журналом «Современная архитектура»
         (Гинзбург подал на конкурс проект «Коммунального дома А-1»), выставка проектов конкурса в 1927 году, и строительство <a href="https://ru.wikipedia.org/wiki/Жилой_дом_Госстраха_на_Малой_Бронной">дома Госстраха на Малой Бронной</a> (1926—1927, М. Я. Гинзбург и В. Н. Владимиров).
