--- a/about.html
+++ b/about.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <meta name="viewport" content="width=device-width">
     <meta charset="utf-8">
+    <link rel="icon" type="image/x-icon" href="http:images/favicon.ico" />
+    <link rel="icon" type="image/png" href="http:images/favicon.png" />
     <link rel="stylesheet" href="stylesheets/style.css">
     <title></title>
     <style media="screen">
