--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <meta name="viewport" content="width=device-width">
     <meta charset="utf-8">
     <link rel="stylesheet" href="stylesheets/style.css">
     <link rel="icon" type="image/x-icon" href="http:images/favicon.ico" />
@@ -86,7 +87,7 @@
         принципов и была поставлена перед авторами проекта. Согласно Екатерине Милютиной, это был дом <q cite="https://ru.wikipedia.org/wiki/Дом_Наркомфина#cite_note-9">нового быта</q>.</p>
       <p>Сметная стоимость строительства составила 10 млн рублей. Строительство жилого корпуса осуществлялось под наблюдением комиссии, возглавляемой Н. А. Милютиным. Коммунальный корпус и корпус прачечной строились без утвержденных чертежей.</p>
       <h2 id="s3"><b>Идеалогия</b></h2>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/7/70/Moisei_Ginzburg.jpg" alt="Архитектор Моисей Гинзбург. Фото М. С. Наппельбаума (1930-е годы)">
+      
       <p>Идеи, связанные с планировочной и объемной структурой, также как и с функциональным наполнением дома, изложены в книге М. Я. Гинзбурга «Жилище», где работе Секции типизации посвящена одна глава, а дому Наркомфина — три главы; идеология дома также была озвучена М. Я. Гинзбургом на пленуме Стройкома. Согласно М. Я. Гинзбургу,
         анализ типов жилья в доходном доме показывает, что его «экономический эффект» был более высоким, чем «массовое жилищное строительство Москвы первых лет после революции» (т. н. моссоветское строительство).</p>
       <p>Работа Секции типизации шла по пути «урезывания и уплотнения обслуживающих площадей» взятой за прототип типологии доходного дома: вначале удалили вторые лестницы и комнаты домработниц, затем оптимизировали коридоры, передние, ванные комнаты и кухни, сохраняя объём и высоту жилых помещений и урезая как площадь, так и высоту подсобных.
