--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
       body{
         background: #eee
        }
+
+
+       @media all and (min-device-width: 320px) and (max-device-width: 568px) and (orientation: portrait) {
+         .index_item a {width: 320px; top: 0px; position: relative;}
+         .index_item{width: 320px; }
+         .index_item p{font-size: 17px; line-height: 20px;}
+         .index_item h1{font-size: 21px;line-height: 20px;}
+         .index_item img{ height: 300px; width: 300px; align-content: center;}
+       }
+
+
     </style>
   </head>
   <body>
