--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
          .index_item h1{font-size: 21px;line-height: 20px;}
          .index_item img{ height: 300px; width: 300px; align-content: center;}
        }
+       @media all and (min-device-width: 320px) and (max-device-width: 568px) and (orientation: landscape) {
+         .index_item a {width: 568px; top: 0px; position: relative;}
+         .index_item{width: 568px; }
+         .index_item p{font-size: 17px; line-height: 20px;}
+         .index_item h1{font-size: 21px;line-height: 20px;}
+         .index_item img{ height: 300px; width: 500px; align-content: center;}
+       }
+
 
 
     </style>
